[package]
name = "robot-ui-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.2"
egui = "0.33.2"
egui_extras = { version = "0.33.2", features = ["all_loaders"] }
image = { version = "0.25.9", features = ["jpeg", "png"] }
ntcore-sys = { path = "ntcore-sys" }
reqwest = "0.12.24"
tokio = "1.48.0"
